# opensearch-mcp-server-py

./: CHANGELOG.md  README.md  USER_GUIDE.md  example_config.yml  pyproject.toml
integration_tests/tools/: test_data_distribution_tool.py  test_dynamic_connection.py  test_log_pattern_analysis_tool.py  test_metric_change_analysis_tool.py
src/mcp_server_opensearch/: server_instructions.py  stdio_server.py  streaming_server.py
src/opensearch/: client.py  helper.py
src/tools/: config.py  skills_tools.py  tool_filter.py  tool_params.py  tools.py
src/tools/agentic_memory/: actions.py  params.py
src/tools/analysis/: clustering_helper.py  data_distribution.py  data_fetching_helper.py  hierarchical_agglomerative_clustering.py  log_pattern_analysis.py  metric_change_analysis.py
tests/mcp_server_opensearch/: test_server_instructions.py
tests/opensearch/: test_connection_overrides.py
tests/tools/: agentic_memory_data.py  test_agentic_memory_tools.py  test_skills_tools.py  test_tool_filters.py  test_tools.py
